django-app.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    project: django
spec:
  selector:
    matchLabels:
      project: django
  template:
    metadata:
      labels:
        project: django
    spec:
      containers:
        - name: container-django
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    project: django
spec:
  selector:
        project: django
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80
  type: LoadBalancer
